RPS using buttons instead of a prompt

--- a/game.html
+++ b/game.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, paper, scissors</title>
+    <title>Rock, Paper, Scissors</title>
+    <link rel="stylesheet" href="styleRPS.css">
 </head>
 <body>
-    <script src = "script.js"></script>
+    <script src = "script.js" defer></script>
+    <div id = "container">
+        <button id = "rock">Rock</button>
+        <button id = "paper">Paper</button>
+        <button id = "scissors">Scissors</button>
+    </div>
+    <div id = "classes">
+            <p class = "playerChose">You chose</p>
+            <p class = "computerChose">Computer chose</p>
+            <p class = "totalScore">Score</p>
+            <p class = "result">Result</p>
+            <button id = "restart">Restart</button>
+        </div>
 </body>
 </html>
